--- a/Back End/.env
+++ b/Back End/.env
@@ -1,5 +1,7 @@
-ETHERSCAN_API_KEY=EYGDUDZDT2WY95BJDYG8QWWNZJBIERAIGQ
-INFURA_API_KEY=c99cf71942d5476681eaa4f02d39bb53
-REACT_APP_BACKEND_HOST=http://localhost
-REACT_APP_BACKEND_PORT=5000
-PORT=3000
+ETHERSCAN_API_KEY = ETHERSCAN_API_KEY
+INFURA_API_KEY = Infura API KEY
+REACT_APP_BACKEND_HOST = http://localhost
+REACT_APP_BACKEND_PORT = 5000
+PORT = 3000
+REACT_APP_UPDATE_INTERVAL = 15
+# BASE_API_URL=http://localhost:5000
