--- a/Front End/.env
+++ b/Front End/.env
@@ -1,13 +1,14 @@
-REACT_APP_FIREBASE_API_KEY=AIzaSyDRTfZV8sy_ECBPST6H3ojAsEWrE9KBG0M
-REACT_APP_FIREBASE_AUTH_DOMAIN=quiz-demo-770e5.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=quiz-demo-770e5
-REACT_APP_FIREBASE_STORAGE_BUCKET=quiz-demo-770e5.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=317766025418
-REACT_APP_FIREBASE_APP_ID=1:317766025418:web:e58680f3d4693bf6ef7433
-ETHERSCAN_API_KEY=EYGDUDZDT2WY95BJDYG8QWWNZJBIERAIGQ
-INFURA_API_KEY=c99cf71942d5476681eaa4f02d39bb53
+REACT_APP_FIREBASE_API_KEY = FIREBASE_API_KEY
+REACT_APP_FIREBASE_AUTH_DOMAIN = AUTH_DOMAIN
+REACT_APP_FIREBASE_PROJECT_ID = PROJECT_ID
+REACT_APP_FIREBASE_STORAGE_BUCKET = STORAGE_BUCKET
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = SENDER_ID
+REACT_APP_FIREBASE_APP_ID = REACT_APP_FIREBASE_APP_ID
+
+ETHERSCAN_API_KEY = ETHERSCAN_API_KEY
+INFURA_API_KEY=Infura API KEY
 REACT_APP_BACKEND_HOST=http://localhost
 REACT_APP_BACKEND_PORT=5000
 PORT=3000
 REACT_APP_UPDATE_INTERVAL=15
-# BASE_API_URL=https://crypto-wallet-app-api.herokuapp.com/
+# BASE_API_URL=http://localhost:5000
